remove due to bug on firefox nightly

--- a/src/ui/styles/main.css
+++ b/src/ui/styles/main.css
@@ -3670,8 +3670,6 @@ body {
                                         border-color: rgba(255, 255, 255, .08);
 
                                         background: rgba(40, 43, 52, .6);
-                                        -webkit-backdrop-filter: blur(10px);
-                                                backdrop-filter: blur(10px);
 
                                         &::before {
                                             content: '';
@@ -4948,8 +4946,6 @@ select, input:not([type=range]), textarea, button {
         box-shadow: 0 2px 8px rgba(0, 0, 0, .2);
 
         background: rgba(40, 43, 52, .7);
-        -webkit-backdrop-filter: blur(10px);
-                backdrop-filter: blur(10px);
 
         transition: border-color .2s ease,
                     box-shadow .2s ease,
